[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tg-ws-proxy"
dynamic = ["version"]

description = "Telegram MTProto WebSocket Bridge Proxy (headless)"
readme = "docs/README.md"
requires-python = ">=3.8"

license = { name = "MIT", file = "LICENSE" }

authors = [
    { name = "Flowseal" }
]

keywords = [
    "telegram",
    "tdesktop",
    "proxy",
    "bypass",
    "websocket",
    "mtproto",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Networking :: Firewalls",
]

# proxy/_aes.py falls back to system libcrypto via ctypes if `cryptography`
# is missing, so the package is technically dependency-free. Listed as an
# optional extra for users on platforms where the wheel is available.
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41"]

[project.scripts]
tg-ws-proxy = "proxy.tg_ws_proxy:main"

[project.urls]
Source = "https://github.com/k1zn/tg-ws-proxy"
Issues = "https://github.com/k1zn/tg-ws-proxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]

[tool.hatch.version]
path = "proxy/__init__.py"

[tool.ruff.lint]
ignore = ["F403", "F405"]
